objects/copado__Compliance_Finding__c.object
<CustomObject
     >
    <fields>
        <fullName>copado__Compliance_Rule__c</fullName>
        <label>Compliance Rule</label>
        <referenceTo>copado__Compliance_Rule__c</referenceTo>
        <relationshipName>Compliance_Incidences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>copado__Compliance_Scan_Result__c</fullName>
        <label>Compliance Scan Result</label>
        <referenceTo>copado__Compliance_Scan_Result__c</referenceTo>
        <relationshipLabel>Compliance Findings</relationshipLabel>
        <relationshipName>Compliance_Findings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Severity__c</fullName>
        <formula>TEXT(copado__Compliance_Rule__r.copado__Severity__c)</formula>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <searchLayouts n1:nil="true" />
</CustomObject>